[project]
name = "quak"
version = "0.3.4"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["anywidget>=0.9.0", "duckdb>=1.0.0", "pyarrow>=16.0.0"]

[dependency-groups]
dev = [
  "anywidget[dev]>=0.9.13",
  "jupyterlab>=4.2.5",
  "polars>=1.5.0",
  "ruff>=0.6.2",
  "vega-datasets>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true
artifacts = ["src/quak/widget.js", "scripts/hatch_build.py"]

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
  "E",  # style errors
  "W",  # style warnings
  "F",  # flakes
  "D",  # pydocstyle
  "D417",  # Missing argument descriptions in Docstrings
  "I",  # isort
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "A001",  # flake8-builtins
  "RUF",  # ruff-specific rules
  "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

[tool.uv]
required-version = ">=0.8.0"
