[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
anyhow = "1.0.86"
arrow = "52.1"
duckdb = { version = "1", features = ["bundled", "csv", "json", "parquet", "r2d2"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta.24", features = ["devtools"] }
tauri-plugin-dialog = "2.0.0-beta.11"
